[package]
name = "untitled"
version = "0.1.0"
authors = ["DeltaSiera <deividas.skama@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
#num-bigint = "0.3.0"
#criterion = "0.3.3"
#
#[[bench]]
#name = "my_benchmark"
#harness = false